# PyIRTools

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
PyIRTools/model/: __init__.py  __main__.py  boolean.py  space_vector.py
PyIRTools/tests/: test_boolean.py  test_preprocess.py  test_space_vector.py
PyIRTools/utils/: preprocess.py
